# forthLSP

./: .gitattributes  .gitignore  README.md  build.gradle.kts  cabal.project  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml
dist-newstyle/cache/: compiler  config
server/: server.cabal
server/app/: Main.hs
server/src/: Analyzer.hs  Diagnostics.hs  Loader.hs  Parser.hs  State.hs  Syntax.hs
server/test/: Main.hs
server/test/golden/: apply_twice.yml  cat.yml  f_s_underflow.yml  math.yml  no_lib.yml  s_underflow.yml  sort.yml  wrong_contract.yml
server/test/libs/: io.fth
src/main/java/forthLSP/: ForthClientDescriptor.java
src/main/java/lsp/: ForthClientDescriptor.java  ForthLspServerSupportProvider.java
src/main/java/syntax/: ForthFileType.java  ForthIcon.java  ForthLanguage.java  ForthLexer.java  ForthSyntaxHighlighter.java  ForthSyntaxHighlighterFactory.java  ForthTokenType.java  ForthTokenTypes.java
