cabal-version:      3.0

name:               server

version:            0.1.0.0

license:            BSD-3-Clause

license-file:       LICENSE

author:             Egor Abramov

maintainer:         76647543+0abramov0@users.noreply.github.com

build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable server
    import:           warnings

    main-is:          Main.hs

    other-modules:    Syntax,
                      Parser,
                      State,
                      Analyzer,
                      Diagnostics,
                      Loader

    build-depends:    base ^>=4.18.3.0,
                      lsp,
                      lsp-types,
                      text,
                      lens,
                      megaparsec,
                      containers,
                      stm,
                      directory,
                      filepath

    hs-source-dirs:   app, src

    default-language: Haskell2010

test-suite server-test
      type:             exitcode-stdio-1.0
      main-is:          Main.hs
      hs-source-dirs:   test
      default-language: Haskell2010
      build-depends: base ^>=4.18.3.0,
                     lsp-test,
                     tasty,
                     tasty-golden,
                     lsp-types,
                     aeson,
                     bytestring,
                     filepath,
                     text,
                     process,
                     yaml
